--- a/Lithp Extension/Resources/manifest.json
+++ b/Lithp Extension/Resources/manifest.json
@@ -4,7 +4,7 @@
 
     "name": "__MSG_extension_name__",
     "description": "__MSG_extension_description__",
-    "version": "1.0",
+    "version": "0.1",
 
     "icons": {
         "48": "images/icon-48.png",
@@ -21,7 +21,7 @@
 
     "content_scripts": [{
         "js": [ "content.js" ],
-        "matches": [ "*://example.com/*" ]
+        "matches": [ "<all_urls>" ]
     }],
 
     "browser_action": {
@@ -36,5 +36,5 @@
         }
     },
 
-    "permissions": [ ]
+    "permissions": [ "activeTab" ]
 }
